k8s/qbittorrent/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  ports: 

  - name: webui
    protocol: TCP
    port: 80
    targetPort: 80

  - name: torrent
    protocol: TCP
    port: 6881
    targetPort: 6881
