k8s/qbittorrent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  rules:
  - host: qbittorrent.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 80
